# Principles-Of-Programming

./: README.md
2018/HomeWorks/: HW - 1.docx  HW - 2.docx  HW 3.docx  HW 4.docx  HW 5.docx
2018/Problem Sets/: Final Sample Questions.docx  PS11+.docx  Problem Set - 3.docx  Problem Set 2.docx  Problem Set 6.docx  Problem Set 8-a.docx  (+13 more)
2019/Projects/1 - Game Console/: CMakeLists.txt  main.c  readme.md  run_game.c
2019/Projects/1 - Game Console/A.I/: A_I.c  FindCloseFood.c
2019/Projects/1 - Game Console/Config_loader/: load_configs.c  load_map.c  load_settings.c
2019/Projects/1 - Game Console/Core_functions/: cd.c  cleanup.c  delay.c  initialization.c  random_gen.c  read_score.c  save_score.c
2019/Projects/1 - Game Console/Display/: end_of_game.c  game_selection_menu.c  main_menu.c  pause_window.c  print_map.c  raindeath.c  start_window.c
2019/Projects/1 - Game Console/Headers/: curses.h  panel.h  project_header.h
2019/Projects/1 - Game Console/Movement/: attack.c  keyboard_handle.c  move_comp.c  move_player.c  player_movement.c  put_dblock.c
Home Works/: HomeWork 1.docx
Problem Sets/: Problem Set 3.docx  Problem Set 7.docx  Problem Set 8-b.docx  Problem Set 9.docx  Problem set 4.docx  problem set 8-c.docx
Quizes/: QUIZ_2.docx  Quiz 3-2.docx
Sample Final Questions/: BTree.c  BTreeBetter.c  BinaryTree.c  BubbleSort.c  CircularLinkedList.c  DoubleCircularLinkedList.c  DoublyLinkedList.c  EvalPoly.c  HashSearch.c  HornerPoly.c  InfixToPostFix_EvalPostFix.c  NormalLinkedList.c  Readme.md  ReverseLinkedList.c  Stdarg.c  StudentStruct.c  TowerOfHanoi.c
(+60 files in other folders)
